--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Footer Version -->
     <div class="absolute bottom-8 text-center">
         <p class="text-sm text-gray-500">From</p>
-        <p class="text-sm font-bold text-primary tracking-widest uppercase">Super Base</p>
+        <p class="text-sm font-bold text-primary tracking-widest uppercase">Code-With_Pratik-LTD</p>
     </div>
 
     <!-- 1. Supabase SDK -->
